welcome page css/ work on register and welcome text

--- a/Readme
+++ b/Readme
@@ -1,8 +1,22 @@
-Client => React, tailwind
+Client => React, tailwind, react-router-dom, react-icons
 Server => node, express, nodemon, mangodb, mongoose, cors, body-parser
 
 
+pages
+welcome[login, register]
+workout[make workout routine, workout routine]
+
+
 exercise Api => https://api-ninjas.com/api/exercises
+
+user{
+    name, email, password, height, weight, gender, Workouts:[workout], 
+}
+
+Muscle{
+    name
+}
+
 
 exercise = {
     "name": "..."
@@ -14,6 +28,8 @@ exercise = {
 
 }
 
-workouts = {
-    exercises:[exercise]
+workout = {
+    exercise-list:[{exercise,sets}]
+    Muscles-used : [muscles]
+
 }
