client and server cors working/ data communicating

--- a/Readme
+++ b/Readme
@@ -1,4 +1,4 @@
-Client => React, tailwind, react-router-dom, react-icons
+Client => React, tailwind, react-router-dom, react-icons, axios
 Server => node, express, nodemon, mangodb, mongoose, cors, body-parser
 
 
